# MyProject

./: CMakeLists.txt  Jenkinsfile
src/: calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp
